kubernetes/backend.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: backend
  labels:
    app: backend
spec:
  containers:
  - name: backend
    image: wbyjt11/backend
  terminationGracePeriodSeconds: 0
---
apiVersion: v1
kind: Service
metadata:
  name: svc-backend
spec:
  ports:
    - name: svc-backend
      port: 9000
      targetPort: 80
  selector:
    app: backend
  type: NodePort
