kubernetes/ingress1.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-1
  annotations:
    kubernetes.io/ingress.class: "nginx"
    #nginx.ingress.kubernetes.io/upstream-hash-by: "true"
    #nginx.ingress.kubernetes.io/rewrite-target: /
    #nginx.ingress.kubernetes.io/add-base-url: "true"
spec:
  rules:
  - http:
      paths:
      - path: /ns_movies
        backend:
          serviceName: svc-backend
          servicePort: 9000
      - path: /swagger.json
        backend:
          serviceName: svc-backend
          servicePort: 9000
      - path: /api-docs
        backend:
          serviceName: svc-backend
          servicePort: 9000
      - path: /swaggerui
        backend:
          serviceName: svc-backend
          servicePort: 9000
      - path: /
        backend:
          serviceName: svc-frontend
          servicePort: 9000
      - path: /static
        backend:
          serviceName: svc-frontend
          servicePort: 9000
      - path: /info
        backend:
          serviceName: svc-frontend
          servicePort: 9000
      - path: /about
        backend:
          serviceName: svc-frontend
          servicePort: 9000
      - path: /upload
        backend:
          serviceName: svc-frontend
          servicePort: 9000
